--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="bottomNavigationMenu1">메뉴1</string>
     <string name="bottomNavigationMenu2">메뉴2</string>
     <string name="bottomNavigationMenu3">메뉴3</string>
+
+    <!-- 로그인 Activity -->
+    <string name="hint_Id">아이디</string>
+    <string name="hint_Pw">패스워드</string>
+    <string name="login_Button">로그인</string>
+    <string name="main_title">UUGN ERP System</string>
 </resources>
